# price-oracle

./: Cargo.toml  Dockerfile  README.md  build.rs  config.yaml
.github/workflows/: docker-image.yml  rust.yml
proto/: prices.proto
src/: aggregator.rs  error.rs  main.rs  price_oracle.rs
src/collector/: binance.rs  bitfinex.rs  mod.rs
src/config/: app.rs  collector.rs  delay.rs  mod.rs  oracle.rs  provider.rs  ticker.rs
src/provider/: binance.rs  bitfinex.rs  mod.rs  p2p.rs
