[package]
name = "p2p-price-oracle"
version = "0.0.1"
edition = "2018"

[[bin]]
name = "oracle"
path = "src/main.rs"

[dependencies]
thiserror = "1.0.30"
config = "0.12.0"
chrono = "0.4.19"
bigdecimal = { version = "0.3.0", features = ["serde"] }
# log
slog = { version = "2.7.0", features = ["nested-values"] }
slog-extlog = "8.0.0"
slog-extlog-derive = "8.0.0"
# serde
serde = { version = "1", features = ["derive"] }
duration-string = { version = "0.0.6", features = ["serde"] }
# duration_string = { version = "0.0.6", features = ["serde_support"] }
erased-serde = "0.3.20"
# Async
tokio = { version = "1.16.1", features = ["rt-multi-thread", "macros", "sync"] }
async-trait = "0.1.52"
# http
reqwest = { version = "0.11.10", features = ["json"] }
# PepeTeam
pepe-config = "0.0.1"
pepe-log = "0.0.5"
